@@ -1,3 +1,3 @@
 #Build Number for ANT. Do not edit!
-#Wed Oct 01 12:29:35 CEST 2008
-build.number=40
+#Wed Oct 01 22:56:23 CEST 2008
+build.number=55
