@@ -106,7 +106,7 @@
 
     <target name="compile" depends="clean, init" description="compiling source codes">
         <mkdir dir="${classes.dir}"/>
-        <javac srcdir="${src.dir}" destdir="${classes.dir}" classpathref="cp" optimize="on" target="1.6">
+        <javac srcdir="${src.dir}" destdir="${classes.dir}" classpathref="cp" optimize="off" target="1.6">
 
         </javac>
         <!-- zkopirovani resourcu -->
