@@ -46,7 +46,7 @@ removeSelectedAction.Action.accelerator = DELETE
 removeSelectedAction.Action.shortDescription = Remove Selected Downloads
 removeSelectedAction.Action.smallIcon=${iconsPath}remove.png
 
-datesFilter_list=All Downloads|Today|Yesterday|In the previous 7 days|In the previous 31 days|In This Calendar Month
+datesFilter_list=All downloads|Today|Yesterday|In the previous 7 days|In the previous 31 days|In this calendar month
 exampleSearchString=Search...
 
 columns_list=Date|File name|Description|Size|URL
