@@ -21,10 +21,13 @@ XXth October 2008 - FreeRapid Downloader 0.62 released
   Added : option to minimize to tray on close
   Added : option to disable using default connection (warning: only connections from proxy list will be used)
 #  Added : czech translation
-  Changed : average speed and duration time attributes on completed file are stored [requested by Chris]
+  Changed : improved searching for free available net port on localhost for creating only one instance of the application
+  Changed : average speed and duration time attributes on completed file are stored [requested by Chris Clemson]
   Changed : small redesign Apperance panel in User Preferences dialog
   Changed : improved pre-allocation files (less file fragmentation)
   Changed : minor changes in RapidShare, FileFactory plugins
+  Fixed : window size was not restored when application crashed
+  Fixed : description area was not enabled after completion
   Fixed : removed czech labels from open proxy file dialog 
 
 20th September 2008 - FreeRapid Downloader 0.61 released - bug fix release + 1 great option ;-)
